--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,11 @@
     <artifactId>data-structure</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+
+
+
+    </dependencies>
+
 
 </project>
